# cookiecutter-fastapi-template

./: README.md  cookiecutter.json
.github/: dependabot.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  azure-pipeline.yml  docker-compose.dev.yml  docker-compose.yml  dot-env-template  pre-start-db-test.sql  pre-start.sh  pyproject.toml  requirements.txt  test
{{cookiecutter.project_slug}}/alembic/: env.py
{{cookiecutter.project_slug}}/alembic/versions/: 4954d8d595d5_init.py  a88f785891f4_init.py
{{cookiecutter.project_slug}}/app/: backend_pre_start.py  initial_data.py  main.py  utils.py
{{cookiecutter.project_slug}}/app/api/: deps.py
{{cookiecutter.project_slug}}/app/api/api_v1/: api.py
{{cookiecutter.project_slug}}/app/api/api_v1/endpoints/: login.py  users.py
{{cookiecutter.project_slug}}/app/core/: config.py  enums.py  security.py
{{cookiecutter.project_slug}}/app/crud/: __init__.py  base.py  crud_user.py
{{cookiecutter.project_slug}}/app/db/: base.py  base_class.py  init_db.py  session.py
{{cookiecutter.project_slug}}/app/models/: __init__.py  user.py
{{cookiecutter.project_slug}}/app/schemas/: __init__.py  msg.py  token.py  user.py
{{cookiecutter.project_slug}}/app/tests/: conftest.py
{{cookiecutter.project_slug}}/app/tests/api/api_v1/: test_login.py  test_users.py
{{cookiecutter.project_slug}}/app/tests/crud/: test_user.py
{{cookiecutter.project_slug}}/app/tests/settings/: test_settings.py
{{cookiecutter.project_slug}}/app/tests/utils/: user.py  utils.py
{{cookiecutter.project_slug}}/requirements/: base.txt  development.txt
